// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Row checkGrammar=false 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row checkGrammar=true 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row checkHighlight=false 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row checkHighlight=true 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row checkSpaces=false 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row checkSpaces=true 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row className="my-classname" 1`] = `
<div
  className="uu5-bricks-row my-classname uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row content="This is Content from ContentMixin" 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</div>
`;

exports[`UU5.Bricks.Row content=12345 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</div>
`;

exports[`UU5.Bricks.Row controlled=false 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row controlled=true 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row default props 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row disabled=false 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row disabled=true 1`] = `
<div
  className="uu5-bricks-row uu5-common-disabled uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Row display="flex" 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-flex uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row display="standard" 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row dynamic=false 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row dynamic=true 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row footer={"type":"div","key":null,"ref":null,"props":{"children":"Footer of section"},"_owner":null,"_store":{}} 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
  <Footer
    content={
      <div>
        Footer of section
      </div>
    }
    id="uuID-footer"
    key="uuID-footer"
  />
</div>
`;

exports[`UU5.Bricks.Row header={"type":"div","key":null,"ref":null,"props":{"children":"Header of section"},"_owner":null,"_store":{}} 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Header
    content={
      <div>
        Header of section
      </div>
    }
    id="uuID-header"
    key="uuID-header"
    underline={false}
  />
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row hidden=false 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row hidden=true 1`] = `
<div
  className="uu5-bricks-row uu5-common-hidden uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row id="myId" 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="myId"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row ignoreHTML=false 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row ignoreHTML=true 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row level="0" 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row level="1" 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row level="2" 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row level="3" 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row level="4" 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row level="5" 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row level="6" 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row level=0 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row level=1 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row level=2 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row level=3 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row level=4 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row level=5 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row level=6 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row mainAttrs=undefined 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row name="myName" 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row nestingLevel="bigBox" 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row nestingLevel="bigBoxCollection" 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row nestingLevel="box" 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row nestingLevel="boxCollection" 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row nestingLevel="container" 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row nestingLevel="inline" 1`] = `""`;

exports[`UU5.Bricks.Row nestingLevel="page" 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row nestingLevel="smallBox" 1`] = `""`;

exports[`UU5.Bricks.Row nestingLevel="smallBoxCollection" 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row nestingLevel="spa" 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row noIndex=false 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row noIndex=true 1`] = `
<div
  className="uu5-bricks-row uu5-noindex uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row noSpacing=false 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row noSpacing=true 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-nospacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row pureRender=false 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row pureRender=true 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row selected=false 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row selected=true 1`] = `
<div
  className="uu5-bricks-row uu5-common-selected uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row style="padding:8px; borderRadius: 2px" 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row style={"backgroundColor":"red","color":"blue"} 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row textCorrector=false 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row textCorrector=true 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row tooltip="My Tooltip" 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row underline=false 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;

exports[`UU5.Bricks.Row underline=true 1`] = `
<div
  className="uu5-bricks-row uu5-bricks-row-standard uu5-bricks-row-spacing"
  id="uuID"
  style={Object {}}
  title={null}
>
  <Column
    colWidth="xs12 s3"
    content="child column"
    id="childID"
    key="childID"
    style="backgroundColor: yellow"
  />
</div>
`;
